# product8

./: .gitignore  README.md  pyproject.toml  requirmants.txt
.github/workflows/: contracts.yml  product_deployment.yml
domain8/: .user.yml  dbt_project.yml  makefile  package-lock.yml  packages.yml  profiles.yml
domain8/contracts/: generator.py
domain8/macros/: create_share.sql  list_product.sql
domain8/models/docs/: data_product.md
domain8/models/marts/: customer_nation.sql
domain8/models/marts/contracts/: customer_nation.yml
domain8/models/staging/: TPCH_SF1_CUSTOMER.sql  TPCH_SF1_NATION.sql  source.yml
